
noinst_LIBRARIES = libdobj.a

libdobj_a_CPPFLAGS = -I$(top_srcdir)/include -Wall

# -D__STRICT_ANSI__  this breaks u_long in sys/types.h...

libdobj_a_SOURCES =			\
			index.c		\
			dataport.c	\
			dfuncs.c	\
			ascii.c		\
			memops.c	\
			sub_obj.c	\
			get_obj.c	\
			arrays.c	\
			areas.c		\
			data_obj.c	\
			data_fns.c	\
			contig.c	\
			makedobj.c	\
			verdata.c	\
			dplist.c

