
noinst_LIBRARIES = libfileio.a

# GNU_SOURCE is needed to elim warnings about round?
libfileio_a_CPPFLAGS = -D_GNU_SOURCE -I$(top_srcdir)/include -Wall

libfileio_a_SOURCES = sunras.c vl.c get_hdr.c vista.c img_file.c hips1.c hips2.c viff.c tiff.c ppm.c rv.c lumisys.c wav.c qt.c bmp.c png.c jpeg.c dsk.c raw.c writehdr.c readhdr.c perr.c fileport.c wsubs.c rdoldhdr.c herrs.c xparam.c hsizepix.c rgb.c read_raw.c filetype.c verfio.c fiomenu.c copts.c jp_opts.c rdcolmap.c pngmenu.c mpeg.c fioasc.c bdf.c matio.c avi.c avi_info_file.c

noinst_HEADERS =				\
			avcodec_hdr.h		\
			bdf.h			\
			bdf_hdr.h		\
			bmp.h			\
			bmp_hdr.h		\
			cderror.h		\
			cdjpeg.h		\
			fio_mpeg.h		\
			fio_png.h		\
			fio_prot.h		\
			fioasc.h		\
			fiojpeg.h		\
			fiotiff.h		\
			get_hdr.h		\
			glimage.h		\
			hip1hdr.h		\
			hip2hdr.h		\
			hipbasic.h		\
			hiperror.h		\
			hipl_fmt.h		\
			hips1.h			\
			hips2.h			\
			hips_pf.h		\
			img_file_hdr.h		\
			jinclude.h		\
			jpeg_hdr.h		\
			jpegint.h		\
			jbm_ppm.h		\
			lshdr.h			\
			lumisys.h		\
			markers.h		\
			matio_api.h		\
			my_avi.h		\
			perr.h			\
			png_hdr.h		\
			ppmhdr.h		\
			rasterf.h		\
			rdoldhdr.h		\
			readhdr.h		\
			rv.h			\
			raw.h			\
			rgb.h			\
			sir_disk.h		\
			sunras.h		\
			verfio.h		\
			vista.h			\
			vistahdr.h		\
			vl.h			\
			wsubs.h			\
			wav.h			\
			wav_hdr.h


