
noinst_LIBRARIES = libinterpreter.a

# define _GNU_SOURCE to quiet warnings about round...
#
libinterpreter_a_CPPFLAGS = -I$(top_srcdir)/include -Wall -D_GNU_SOURCE

libinterpreter_a_SOURCES =		\
					\
		adjust.c		\
		askif.c			\
		bind.c			\
		builtin.c		\
		callback.c		\
		chewtext.c		\
		complete.c		\
		do_cmd.c		\
		features.c		\
		filerd.c		\
		fork.c			\
		help.c			\
		history.c		\
		howmany.c		\
		howmuch.c		\
		mac_cmds.c		\
		macros.c		\
		mouse.c			\
		my_stty.c		\
		ncmds.c			\
		param.c			\
		pipes.c			\
		qdup.c			\
		query.c			\
		qword.c			\
		rcfile.c		\
		sched.c			\
		serial.c		\
		stamps.c		\
		threads.c		\
		timex.c			\
		trynice.c		\
		tty_flags.c		\
		ver_cmds.c		\
		verjbm.c		\
		var_cmds.c		\
		vars.c			\
		which1.c


noinst_HEADERS =			\
		adjust.h		\
		async.h			\
		bi_cmds.h		\
		history.h		\
		stamps.h		\
		my_stty.h		\
		verjbm.h		\
		callback.h


