
noinst_LIBRARIES = libglmenu.a

libglmenu_a_CPPFLAGS = -I$(top_srcdir)/include -Wall

libglmenu_a_SOURCES = glmenu.c dl.c tilemenu.c gl_util.c glx_supp.c tile.c

noinst_HEADERS =	dl.h tile.h glx_supp.h glut_supp.h gl_util.h

#3ds.c
#Init.c
#Main.c
#dl.c
#facemain.c
#facemenu.c
#gl_util.c
#glmain.c
#glmenu.c
#glut_supp.c
#glx_supp.c
#teapot.c
#tile.c
#tilemenu.c
