
noinst_LIBRARIES = libqutil.a

libqutil_a_CPPFLAGS = -I$(top_srcdir)/include -D_GNU_SOURCE -Wall

libqutil_a_SOURCES =			\
					\
			tryhard.c	\
			items.c		\
			class.c		\
			rn.c		\
			substr.c	\
			hash.c		\
			termio.c	\
			node.c		\
			namesp.c	\
			savestr.c	\
			tkspace.c	\
			sigpush.c	\
			debug.c		\
			getbuf.c	\
			freel.c		\
			error.c		\
			nexpr.y		\
			nexpr.c		\
			function.c	\
			strbuf.c	\
			expect.c	\
			mkver.c		\
			versupt.c	\
			pathnm.c	\
			fileck.c	\
			handle.c	\
			permission.c




