
noinst_LIBRARIES = libvec_util.a

libvec_util_a_CPPFLAGS = -I$(top_srcdir)/include -DNOWRAP -Wall

libvec_util_a_SOURCES =				\
				bessel.c	\
				dptone.c	\
				resample.c	\
				oddeven.c	\
				mkwheel.c	\
				qt.c		\
				convolve.c	\
				conv3d.c	\
				dither.c	\
				radavg.c	\
				dpinvert.c	\
				sample.c	\
				median.c	\
				thinz.c		\
				morph.c		\
				dct8.c		\
				SeedFill.c	\
				legendre.c	\
				lutmap.c	\
				vinterp.c	\
				krast.c		\
				cumsum.c	\
				scramble.c	\
				yuv2rgb.c	\
				hough.c		\
				local_max.c	\
				integral.c	\
				histo.c		\
				quads.c		\
				graph_path.c	\
				gj.c

noinst_HEADERS = quadtree.h ggem.h polynm.h

